trying to fix alignment for artist scroll banner

--- a/css/main.css
+++ b/css/main.css
@@ -309,14 +309,17 @@ nav a {
 /* --- 2. MOBILE MEDIA STATE --- */
 @media (max-width: 800px) {
     .horizontal-scroll-wrapper{
-        padding: 0 15% 40px 15%;
-        scroll-padding: 0 15%;
-        gap: 20px;
+       padding: 0 40px 40px 40px;
+       scroll-padding: 0 40px;
+       gap: 20px;
+       display: flex;
+       align-items: center;
     }
     .story-card {
         flex: 0 0 75vw;
         height: 480px;
         scroll-snap-align: center;
+        margin: 0;
     }
     .grid-container{
         grid-template-columns: 1fr;
